incluyo en el fichero principal las secciones del documento

--- a/memoria_trabajo/Trabajo_ICD.tex
+++ b/memoria_trabajo/Trabajo_ICD.tex
@@ -49,14 +49,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % secciones
-%
-% \input{src/introduccion.tex}
-%
-% \input{src/eda.tex}
-%
-% \input{src/regresion.tex}
-%
-% \input{src/clasificacion.tex}
+
+\input{src/introduccion.tex}
+
+\input{src/eda.tex}
+
+\input{src/regresion.tex}
+
+\input{src/clasificacion.tex}
 
 
 \end{document}
