corrección de erratas en EDA

--- a/memoria_trabajo/src/eda.tex
+++ b/memoria_trabajo/src/eda.tex
@@ -1,5 +1,6 @@
 \section{Análisis exploratorio de datos}
 
+En este primer apartado realizaremos el análisis de los datos. Este análisis inicial nos servirá para visualizar como son los datos, si existen relaciones entre las distintas características que los conforman, así como extraer información de cada característica como pueden ser sus valores de interés, si cuenta con valores perdidos o anomalías así como más información. Además, también nos servirá para realizar hipótesis sobre como se comportarán los distintos predictores a la hora de generar un modelo, si algunos modelos no funcionarán debido a como están distribuidos los datos, entre otras.
 
 \subsection{Conjunto de datos para regresión: baseball}
 
