retoques en la introducción

--- a/memoria_trabajo/src/introduccion.tex
+++ b/memoria_trabajo/src/introduccion.tex
@@ -7,4 +7,4 @@ En este trabajo realizaremos un análisis exploratorio de datos sobre dos conjun
 	\item Iris: Conjunto de datos con información sobre el pétalo y sépalo de la flor Iris, incluyendo su clase de la cuál existen tres variantes, Setosa, Versicolor y Virginica, que será la característica objetivo.
 \end{enumerate}
 
-Tras realizar este primer análisis con el que obtendremos información de como es cada conjunto de datos y las características que lo conforman, pasaremos a realizar un estudio individual con cada conjunto de datos aplicando diversas técnicas de regresión para el primer conjunto y de clasificación para el tercero, así como realizar una comparativa de los métodos utilizados y un tercer método con distintos conjuntos de datos.
+Tras realizar este primer análisis, con el que obtendremos información de como es cada conjunto de datos y las características que lo conforman, pasaremos a realizar un estudio individual aplicando diversas técnicas de regresión para el primer conjunto y de clasificación para el segundo, así como realizar una comparativa de los métodos utilizados y un tercer método con distintos conjuntos de datos.
