ajusto espacios en la portada

--- a/memoria_trabajo/Trabajo_ICD.tex
+++ b/memoria_trabajo/Trabajo_ICD.tex
@@ -29,8 +29,8 @@
       \emph{Correo:} advy99@correo.ugr.es}
 
 	 \includegraphics[scale = 0.20]{logo_etsiit.png}\\[0.3 cm]
-    {\large \thedate}\\[0.5cm]
-	 \url{https://github.com/advy99/ICD/}
+    {\large \thedate}\\[0.75cm]
+	 \url{https://github.com/advy99/ICD/}\\[0.75cm]
     \doclicenseThis
 \end{titlepage}
 
